Changes for 1.0beta9:

 - added EOL character to make HTML source more readable (Alexei)
 - added new column "severity" to history of alarms (Alexei)
 - status of triggers. If Select is used, no refresh (Alexei)
 - support for MIN algorithm for IT Services (Alexei)
 - support for timeticks for SNMP values. Thanks to Daniel
 Ester. (Alexei)
 - fixed pinger.pl (Alexei)
 - user-defined parameters will overwrite already existing
 (Alexei)
 - fixed field order for PostgreSQL, table items (Alexei)
 - removed doc/manual.lyx (Alexei)
 - fixed resizing of simple graphs (Alexei)
 - suppor for "--with-net-snmp" and "--with-ucd-snmp" (Alexei)
 - fixed type of services.goodsla. It's float now. (Alexei)
 - fixed addition of host triggers into IT Service tree (Alexei)
 - support of '(' and ')' in item keys (Alexei)
 - fixed dark blue color for user-defined chart (Alexei)
 - removed DOS style EOL from RedHat startup scripts (Alexei)
 - IT service to be hard-linked when added (Alexei)
 - fixed calculate_service_availability() (Alexei)
 - added report3.php (Alexei)
 - color statuses in media.php (Alexei)
 - fixed data.sql (Alexei)

Changes for 1.0beta8:

 - very basic support for SNMP trapping (Alexei)
 - added misc/snmptrap/snmptrap.sh (Alexei)
 - group selection for Item configuration form (Alexei)
 - added support for SLA level in IT Services (Alexei)
 - added fields services.showsla and services.goodsla (Alexei)
 - added field items.snmp_port (Alexei)
 - user-defined port number for SNMP requests (Alexei)
 - fixed SQL errors when adding host to IT Services (Alexei)
 - added chart_sla.php (Alexei)
 - fixed incorrect handling of timeouts when sendign emails
 (Alexei)
 - fixed selection of recipient in trigger actions (Alexei)
 - fixed Plain Text values (Alexei)
 - fixed improper handling of special characters i.e. '\/" (Alexei)
 - fixed Last100 and Prev100 for both Alarms and Alerts (Alexei)
 - fixed "STATUS OF ZABBIX". Command was changed to 'ps aux' (Alexei)